[package]
name = "aaaaa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
reqwest = {version = "0.11",features = ["blocking"]}
scraper = "0.18.1"
async-trait = "0.1.74"
chromiumoxide = { version = "0.5.4",default-features = false, features = ["tokio-runtime"] }
tokio-stream = "0.1.8"